# rim

./: .gitignore  Cargo.toml  README.md  code.rim  idk.js  lazy-output.js  output.js  strict-output.js  syntax.js  syntax.txt
cli/: Cargo.toml
cli/src/: command.rs  fs_utils.rs  main.rs
compiler/: Cargo.toml  code.rim  syntax.js  syntax.txt
compiler/example/: config.json  main.rim
compiler/example/main/: greatJobCool.rim
compiler/example/output/js/: jsMain.js
compiler/project/: config.kdl
compiler/src/: built_in_module.rs  lib.rs
compiler/src/depending/: mod.rs
compiler/src/parsing/: module.rs
compiler/src/parsing/ident/: item.rs
compiler/src/parsing/val/: infix.rs  mod.rs  number.rs  string.rs
compiler/src/project/: config.rs  dependency.rs  file_module.rs  fs.rs  library_server.rs  mod.rs  package.rs  packages_map.rs
compiler/src/project/library_server/: store.rs
compiler/src/resolution/: mod.rs
compiler/src/resolution/module/: mod.rs
compiler/src/resolution/module/where/: mod.rs  public.rs  structure.rs
compiler/src/resolution/val/: mod.rs
compiler/src/syntax/: path.rs
compiler/src/syntax/ident/: item.rs  mod.rs
compiler/src/syntax/module/: builder.rs  mod.rs
compiler/src/syntax/number/: item.rs
compiler/src/syntax/val/: array.rs  mod.rs  string.rs
compiler/src/syntax/val/js/: effect.rs  mod.rs  node.rs
examples/factorial/: config.json  main.rim
examples/libr/: config.json  main.rim
examples/modules/: config.json  main.rim
examples/timeout/: config.json  main.rim
lib/: Cargo.toml
lib/src/: cli.rs  compiler.rs  fs_utils.rs  lib.rs  tokio_fs.rs  tokio_fs_utils.rs
lib/src/cli/: command.rs  fs_utils.rs
lib/src/compiler/: built_in_module.rs
lib/src/compiler/parsing/: comment.rs  function.rs  mod.rs  module.rs  path.rs
lib/src/compiler/parsing/ident/: item.rs  mod.rs
lib/src/compiler/parsing/val/: infix.rs  infix_apply.rs  mod.rs  number.rs  string.rs
lib/src/compiler/resolution/: env.rs  globe.rs  id.rs  mod.rs  type.rs  type_check.rs
lib/src/compiler/resolution/module/: mod.rs
lib/src/compiler/resolution/module/where/: builder.rs  mod.rs  public.rs  structure.rs
lib/src/compiler/resolution/type_check/: base_type.rs  bounds.rs  poly_type.rs  var.rs
lib/src/compiler/resolution/val/: mod.rs
lib/src/compiler/syntax/: path.rs
lib/src/compiler/syntax/ident/: mod.rs
lib/src/compiler/syntax/module/: builder.rs  mod.rs
lib/src/compiler/syntax/number/: mod.rs
lib/src/compiler/syntax/val/: boolean.rs  mod.rs  number.rs
lib/src/compiler/syntax/val/infix/: item.rs  mod.rs
lib/src/compiler/syntax/val/js/: browser.rs  mod.rs  value.rs
lib/src/ident/: item.rs
lib/src/project/: config.rs  dependency.rs  file_module.rs  mod.rs  packages_map.rs
lib/src/project/library_server/: store.rs
library_server/: Cargo.toml
library_server/src/: main.rs
library_server/src/client_server/: mod.rs  store.rs
library_server/src/http/: mod.rs  store.rs
library_server/src/store/: directory.rs  mod.rs  package.rs  package_id.rs
lsp/: Cargo.toml
lsp/src/: main.rs
macros/: Cargo.toml
shared/: Cargo.toml
src/: idk.js  main.rs
testProject/: main.rim
(+56 files in other folders)
