[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
compiler = { path = "../compiler" }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "fs"] }