[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
either = "1.9.0"
rand = "0.8.5"
ariadne = { version = "0.3.0" }
nonempty = "0.9.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "fs"] }
async-recursion = "1.0.5"
kdl = "4.6.0"
shared = { version = "0.1.0", path = "../shared" }
serde = "1.0.193"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
bytes = "1.5.0"
zip = "0.6.6"
async_zip = { version = "0.0.15", features = ["tokio"] }
