[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
either = "1.9.0"
rand = "0.8.5"
ariadne = { version = "0.3.0" }
nonempty = "0.9.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "fs"] }
async-recursion = "1.0.5"
kdl = "4.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
bytes = "1.5.0"
zip = "0.6.6"
async_zip = { version = "0.0.15", features = ["tokio"] }
async-tempfile = "0.5.0"
tempfile = "3.8.1"
axum = { version = "0.7.2", features = ["macros"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tower-http = { version = "0.5.0", features = ["trace"] }
futures-util = "0.3.30"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
zip_archive = "1.2.2"
zip-extensions = "0.6.2"
