[package]
name = "cuul_library"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
chumsky = "0.9.3"
compiler = { path = "../compiler", version = "*" }
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
shared = { version = "0.1.0", path = "../shared" }
tokio = "1.34.0"
warp = "0.3.6"
zip = "0.6.6"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tower-http = { version = "0.5.0", features = ["trace"] }