[package]
name = "rim-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.95.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
tower-lsp = "0.20.0"
